--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Security configurations
-spring.security.user.name=devbrat
-spring.security.user.password=devbrat123
+#spring.security.user.name=devbrat
+#spring.security.user.password=devbrat123
+
+#JWT config(you can make key as long as you want)
+jwt.secretKey = nZr4u7x!A%D*G-KaPdSgVkYp3s6v9y$B
