Added refresh Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #JWT config(you can make key as long as you want)
 jwt.secretKey = nZr4u7x!A%D*G-KaPdSgVkYp3s6v9y$B
+
+deploy.env = development
