--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.security.user.password=devbrat123
 
 #JWT config(you can make key as long as you want)
+#Must be at least 32 characters long for HS256 algorithm
 jwt.secretKey = nZr4u7x!A%D*G-KaPdSgVkYp3s6v9y$B
 
+#Environment specific properties
 deploy.env = development
