--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SecurityApplication
 
-spring.datasource.url=jdbc:mysql://localhost:3306/security_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/security_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -12,9 +12,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.security.user.name=devbrat
 #spring.security.user.password=devbrat123
 
+
 #JWT config(you can make key as long as you want)
 #Must be at least 32 characters long for HS256 algorithm
 jwt.secretKey = nZr4u7x!A%D*G-KaPdSgVkYp3s6v9y$B
 
 #Environment specific properties
 deploy.env = development
+
